--- a/app/src/main/res/layout/activity_custom_camara.xml
+++ b/app/src/main/res/layout/activity_custom_camara.xml
@@ -27,16 +27,7 @@
             />
 
 
-        <Spinner
-            android:id="@+id/ListOfExams"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="50dp">
 
-
-        </Spinner>
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -118,14 +109,36 @@
                 app:cb_pressedRingWidth="80dip"
                 android:src="@drawable/gal" />
 
-            <at.markushi.ui.CircleButton
-                android:id="@+id/btnCapturarSheet"
-                android:layout_width="177dp"
-                android:layout_height="94dp"
-                android:layout_gravity="bottom"
-                app:cb_color="#99CC00"
-                app:cb_pressedRingWidth="200dip"
-                android:src="@drawable/cap" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               android:layout_gravity="bottom"
+                >
+                <at.markushi.ui.CircleButton
+                    android:id="@+id/btnCapturarSheet"
+                    android:layout_width="177dp"
+                    android:layout_height="94dp"
+                    android:layout_gravity="bottom"
+                    app:cb_color="#99CC00"
+                    app:cb_pressedRingWidth="200dip"
+                    android:src="@drawable/cap" />
+
+                <at.markushi.ui.CircleButton
+                    android:id="@+id/tryAgain"
+                    android:layout_width="68dp"
+                    android:layout_height="59dp"
+                    android:src="@drawable/trr" />
+
+                <at.markushi.ui.CircleButton
+                    android:id="@+id/confirmScan"
+                    android:layout_width="67dp"
+                    android:layout_height="66dp"
+
+                    android:layout_alignParentEnd="true"
+
+                    android:layout_marginEnd="0dp"
+                    android:src="@drawable/ok" />
+            </RelativeLayout>
 
         </LinearLayout>
 
@@ -142,6 +155,24 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <Spinner
+        android:id="@+id/ListOfExams"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50sp"
+        android:textSize="20sp"
+
+
+
+
+        android:gravity="center">
+
+
+    </Spinner>
+
+
+
     <TextView
         android:id="@+id/Answers"
         android:layout_width="match_parent"
