--- a/app/src/main/res/layout/fragment__academic__home.xml
+++ b/app/src/main/res/layout/fragment__academic__home.xml
@@ -271,7 +271,7 @@
                             android:id="@+id/textView454"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/btn_Prediction"
+                            android:layout_below="@id/IV_Prediction"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="10dp"
                             android:text="Predict Performance"
@@ -279,7 +279,7 @@
                             app:fontFamily="@font/aclonica" />
 
                         <ImageView
-                            android:id="@+id/btn_Prediction"
+                            android:id="@+id/IV_Prediction"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:layout_centerHorizontal="true"
